[package]
name = "app"
version = "2.0.0"
description = "word-index"
authors = ["thelostsoul"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }
meilisearch-lib = { path = "meilisearch/meilisearch-lib" }
meilisearch-http = { path = "meilisearch/meilisearch-http", features = ["analytics"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["fmt", "local-time"] }
md5 = "0.7.0"
tracing-appender = "0.2.2"
time = { version = "0.3.9", features = ["std", "macros"] }
clap = { version = "3.1.6", features = ["derive", "env"] }
byte-unit = { version = "4.0.14", default-features = false, features = ["std"] }
tokio-stream = "0.1.8"
actix-web = { version = "4.0.1", default-features = false }
bytes = "1.1.0"
tokio = { version = "1.17.0", features = ["rt"] }
dotext = "0.1.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
